<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_equation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="0"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_one"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn_four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_four"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn_seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_seven"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn_zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_zero"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_two"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn_five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_five"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn_eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_eight"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn_plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_plus"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_three"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn_six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_six"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn_nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_nine"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn_equal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:letterSpacing="0.1"
                android:onClick="ClickBTN"
                android:text="@string/btn_equal"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</android.support.constraint.ConstraintLayout>